--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-methods": "^1.1.4",
-    "morgan": "^1.9.1"
+    "http-errors": "^1.7.3",
+    "mongoose": "^5.8.3",
+    "morgan": "^1.9.1",
+    "ts-mongoose": "0.0.21"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
