--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node_modules/.bin/tsc && node dist/index.js",
-    "dev": "node_modules/.bin/nodemon src/index.ts"
+    "dev": "node_modules/.bin/nodemon src/index.ts",
+    "format": "prettier --write \"src/**/**/**/*.ts\""
   },
   "author": "rahultagadghar@gmail.com",
   "license": "MIT",
@@ -24,11 +25,12 @@
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
-    "nodemon": "^2.0.1",
-    "typescript": "^3.7.2",
     "@types/http-errors": "^1.6.3",
     "@types/mongoose": "^5.5.34",
     "@types/morgan": "^1.7.37",
-    "@types/node": "^12.12.17"
+    "@types/node": "^12.12.17",
+    "nodemon": "^2.0.1",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.2"
   }
 }
