--- a/package.json
+++ b/package.json
@@ -11,21 +11,25 @@
   "author": "rahultagadghar@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-methods": "^1.1.4",
     "http-errors": "^1.7.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
     "morgan": "^1.9.1",
     "ts-mongoose": "0.0.21"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/http-errors": "^1.6.3",
+    "@types/jsonwebtoken": "^8.3.5",
     "@types/mongoose": "^5.5.34",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.22",
