--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "rahultagadghar@gmail.com",
   "license": "MIT",
   "dependencies": {
+    "@types/express-useragent": "^1.0.0",
     "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-methods": "^1.1.4",
+    "express-useragent": "^1.0.13",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
