--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "strict": false,
     "esModuleInterop": true,
+    "sourceMap": true,
     "target": "es5",
     "declaration": true,
     "experimentalDecorators": true
