--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.3",
     "morgan": "^1.9.1",
+    "redis": "^2.8.0",
     "ts-mongoose": "0.0.21"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/mongoose": "^5.5.34",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.22",
+    "@types/redis": "^2.8.14",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
     "typescript": "^3.7.4"
