--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/express-useragent": "^1.0.0",
+    "aws-sdk": "^2.612.0",
     "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
@@ -19,6 +20,7 @@
     "express": "^4.17.1",
     "express-methods": "^1.1.4",
     "express-useragent": "^1.0.13",
+    "fs": "0.0.1-security",
     "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.1",
